--- a/frontend/angular.json
+++ b/frontend/angular.json
@@ -87,13 +87,12 @@
             ],
             "tsConfig": "tsconfig.spec.json",
             "assets": [
-              {
-                "glob": "**/*",
-                "input": "public"
-              }
+              "src/assets",
+              "src/favicon.ico"
             ],
             "styles": [
               "src/styles.css"
+              
             ],
             "scripts": []
           }
