add review, delete user, delete ride, change name helper to notification, filterRide

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,4 +1,5 @@
 spring.application.name=backend
+spring.main.allow-circular-references=true
 spring.datasource.url=jdbc:mysql://root:gFdUjnouEjYZDwzmPYRaPeOhcvqsVzmF@junction.proxy.rlwy.net:12829/railway?useSSL=false&serverTimezone=UTC
 spring.datasource.username=root
 spring.datasource.password=gFdUjnouEjYZDwzmPYRaPeOhcvqsVzmF
