--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 spring.application.name=backend
 spring.main.allow-circular-references=true
-spring.datasource.url=jdbc:mysql://root:gFdUjnouEjYZDwzmPYRaPeOhcvqsVzmF@junction.proxy.rlwy.net:12829/railway?useSSL=false&serverTimezone=UTC
+spring.datasource.url=jdbc:mysql://localhost:3306/test?useSSL=false&serverTimezone=UTC
 spring.datasource.username=root
-spring.datasource.password=gFdUjnouEjYZDwzmPYRaPeOhcvqsVzmF
+spring.datasource.password=root
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
