--- a/frontend/angular.json
+++ b/frontend/angular.json
@@ -90,6 +90,8 @@
               "src/favicon.ico"
             ],
             "styles": [
+              "node_modules/bootstrap-icons/font/bootstrap-icons.css",
+              "node_modules/bootstrap/dist/css/bootstrap.min.css",
               "src/styles.css"
               
             ],
